--- a/Seam Carving.vcxproj.filters
+++ b/Seam Carving.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="SeamCarving.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ImageProcessor.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
