--- a/Seam Carving.vcxproj
+++ b/Seam Carving.vcxproj
@@ -116,11 +116,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ImageProcessor.cpp" />
     <ClCompile Include="SeamCarving.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ImageProcessor.hpp" />
+    <ClInclude Include="SeamCarving.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
